# saddle-ai-utility-ai

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
demo/basic/: index.html
demo/lab/: index.html
demo/realtime_cadence/: index.html
demo/response_curves/: index.html
demo/selection_strategies/: index.html
demo/stress_test/: index.html
demo/target_scoring/: index.html
demos/basic/: index.html
demos/realtime_cadence/: index.html
demos/response_curves/: index.html
demos/selection_strategies/: index.html
demos/stress_test/: index.html
demos/target_scoring/: index.html
docs/: architecture.md  configuration.md
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs  support.rs
examples/realtime_cadence/: Cargo.toml
examples/realtime_cadence/src/: main.rs
examples/response_curves/: Cargo.toml
examples/response_curves/src/: main.rs
examples/selection_strategies/: Cargo.toml
examples/selection_strategies/src/: main.rs
examples/stress_test/: Cargo.toml
examples/stress_test/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
examples/target_scoring/: Cargo.toml
examples/target_scoring/src/: main.rs
src/: assets.rs  assets_tests.rs  components.rs  curves.rs  curves_tests.rs  lib.rs  messages.rs  momentum.rs  momentum_tests.rs  scoring.rs  scoring_tests.rs  selection.rs  selection_tests.rs  systems.rs  systems_tests.rs  tracing.rs  tracing_tests.rs
(+29 files in other folders)
