[workspace]
members = [
    "support",
    "basic",
    "response_curves",
    "selection_strategies",
    "target_scoring",
    "realtime_cadence",
    "stress_test",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-ai-utility-ai = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
